added skeleton 'rule' files

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,4 +4,5 @@ bin_PROGRAMS=wordpath
 AM_CPPFLAGS=@GLIB_CFLAGS@
 AM_LDFLAGS=@GLIB_LIBS@
 
-wordpath_SOURCES=word.c word.h
+wordpath_SOURCES=dictionary.c dictionary.h \
+                 rule.c rule.h
