started implementing sample dictionary

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,4 +5,5 @@ AM_CPPFLAGS=@GLIB_CFLAGS@
 AM_LDFLAGS=@GLIB_LIBS@
 
 wordpath_SOURCES=dictionary.c dictionary.h \
-                 rule.c rule.h
+                 rule.c rule.h \
+                 wordpath.c
