working 'subsitution' rule

--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,7 @@
 
 AC_INIT(wordpath, 0.1, [gbenison@gmail.com])
 AC_CONFIG_HEADERS([config.h])
-AC_CONFIG_SRCDIR([src/word.c])
+AC_CONFIG_SRCDIR([src/dictionary.c])
 
 AC_PROG_CC
 
