--- a/configure.ac
+++ b/configure.ac
@@ -5,7 +5,8 @@ AC_CONFIG_SRCDIR([src/dictionary.c])
 
 AC_PROG_CC
 
-PKG_CHECK_MODULES(GLIB,  glib-2.0)
+PKG_CHECK_MODULES(GLIB,   glib-2.0)
+PKG_CHECK_MODULES(IGRAPH, igraph)
 
 AM_INIT_AUTOMAKE
 AC_CONFIG_FILES([Makefile
