--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,8 +1,8 @@
 
 bin_PROGRAMS=wordpath
 
-AM_CPPFLAGS=@GLIB_CFLAGS@
-AM_LDFLAGS=@GLIB_LIBS@
+AM_CPPFLAGS=@GLIB_CFLAGS@ @IGRAPH_CFLAGS@
+AM_LDFLAGS=@GLIB_LIBS@ @IGRAPH_LIBS@
 
 wordpath_SOURCES=dictionary.c dictionary.h \
                  rule.c rule.h \
