eliminated custom shortest path algorithm for a standard one

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,5 +8,5 @@ wordpath_SOURCES=dictionary.c dictionary.h \
                  rule.c rule.h \
                  wordpath.c \
                  mie-dict.c \
-                 en-dict.c \
-                 connection.c connection.h
+                 en-dict.c
+
