added a dictionary from 'Alice in Wonderland'

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,5 +8,6 @@ wordpath_SOURCES=dictionary.c dictionary.h \
                  rule.c rule.h \
                  wordpath.c \
                  mie-dict.c \
+	         alice-dict.c \
                  en-dict.c
 
