renamed to 'taubatron'

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,13 +1,13 @@
 
-bin_PROGRAMS=wordpath
+bin_PROGRAMS=taubatron
 
 AM_CPPFLAGS=@GLIB_CFLAGS@ @IGRAPH_CFLAGS@
 AM_LDFLAGS=@GLIB_LIBS@ @IGRAPH_LIBS@
 
-wordpath_SOURCES=dictionary.c dictionary.h \
-                 rule.c rule.h \
-                 wordpath.c \
-                 mie-dict.c \
-	         alice-dict.c \
-                 en-dict.c
+taubatron_SOURCES=dictionary.c dictionary.h \
+                  rule.c rule.h \
+                  wordpath.c \
+                  mie-dict.c \
+	          alice-dict.c \
+                  en-dict.c
 
