switched to unix-domain socket

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,8 +1,8 @@
 
 lib_LTLIBRARIES=libtaubatron.la
 
-AM_CPPFLAGS=@GLIB_CFLAGS@ @IGRAPH_CFLAGS@
-AM_LDFLAGS=@GLIB_LIBS@ @IGRAPH_LIBS@
+AM_CPPFLAGS=@GLIB_CFLAGS@ @IGRAPH_CFLAGS@ @GUILE_CFLAGS@
+AM_LDFLAGS=@GLIB_LIBS@ @IGRAPH_LIBS@ @GUILE_LIBS@
 
 libtaubatron_la_SOURCES=dictionary.c dictionary.h \
                   rule.c rule.h \
